--- a/css/homepage.css
+++ b/css/homepage.css
@@ -69,6 +69,16 @@ input[type=number] {
   width: 40px;
 }
 
+.main-box-heading {
+  margin-bottom: 10px;
+}
+
+.main-box-paragraph {
+  color: #A89CA0;
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+
 .main-link {
   background-color: #287BFF;
   color: white;
@@ -107,6 +117,22 @@ input[type=number] {
 .main-link.borderd:hover {
   background-color: #3d38d3;
   color: white;
+}
+
+.success {
+  color: #0075ff;
+}
+
+.warning {
+  color: #f59e0b;
+}
+
+.danger {
+  color: #f44336;
+}
+
+.info {
+  color: purple;
 }
 
 .container {
@@ -340,7 +366,7 @@ input[type=number] {
     margin-right: 10px;
   }
 }
-.page .content .wrapper .news {
+.page .content .wrapper .notification {
   grid-column-start: 1;
   grid-column-end: -1;
   background-color: white;
@@ -351,39 +377,39 @@ input[type=number] {
   justify-content: space-between;
   align-items: center;
 }
-.page .content .wrapper .news .massage h3 {
+.page .content .wrapper .notification .massage h3 {
   color: rgba(40, 123, 255, 0.7);
   font-size: 22px;
   width: 50%;
 }
-.page .content .wrapper .news .massage p {
+.page .content .wrapper .notification .massage p {
   margin: 20px 0px;
   color: #A89CA0;
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
 }
-.page .content .wrapper .news .massage .links {
+.page .content .wrapper .notification .massage .links {
   display: flex;
   align-items: center;
 }
 @media (max-width:767px) {
-  .page .content .wrapper .news .massage .links {
+  .page .content .wrapper .notification .massage .links {
     justify-content: space-between;
   }
 }
-.page .content .wrapper .news .massage .links .main-link {
+.page .content .wrapper .notification .massage .links .main-link {
   margin: 0px;
   padding: 10px;
 }
-.page .content .wrapper .news .massage .links span {
+.page .content .wrapper .notification .massage .links span {
   margin-left: 15px;
   color: #0075ff;
   text-decoration: underline;
   position: relative;
   cursor: pointer;
 }
-.page .content .wrapper .news .massage .links span::after {
+.page .content .wrapper .notification .massage .links span::after {
   font-family: var(--fa-style-family-classic);
   content: "\f105";
   font-weight: 900;
@@ -393,22 +419,111 @@ input[type=number] {
   right: -15px;
 }
 @media (max-width:767px) {
-  .page .content .wrapper .news .massage .links span::after {
+  .page .content .wrapper .notification .massage .links span::after {
     display: none;
   }
 }
-.page .content .wrapper .news .image {
+.page .content .wrapper .notification .image {
   flex: 1;
   display: flex;
   justify-content: center;
 }
-.page .content .wrapper .news .image img {
+.page .content .wrapper .notification .image img {
   width: 150px;
 }
 @media (max-width:767px) {
-  .page .content .wrapper .news .image img {
+  .page .content .wrapper .notification .image img {
     display: none;
   }
+}
+.page .content .wrapper .statistics {
+  grid-column-start: 1;
+  grid-column-end: -1;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+}
+.page .content .wrapper .statistics .box {
+  padding: 30px 10px;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page .content .wrapper .statistics .box .icon {
+  margin-right: 10px;
+  width: 70px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+}
+.page .content .wrapper .statistics .box .icon i {
+  font-size: 30px;
+}
+.page .content .wrapper .statistics .box .text span {
+  display: block;
+}
+.page .content .wrapper .statistics .box .text .title {
+  font-weight: 700;
+  color: #333333;
+}
+.page .content .wrapper .statistics .box .text .number {
+  font-weight: 500;
+  margin: 5px 0px;
+  font-weight: 700;
+  color: #333333;
+}
+.page .content .wrapper .statistics .box .text .date {
+  color: #A89CA0;
+  font-size: 13px;
+}
+.page .content .wrapper .statistics .box .text .result {
+  margin: 5px 0px 0px;
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+  color: #A89CA0;
+}
+.page .content .wrapper .statistics .box .text .result span {
+  font-size: 12px;
+  margin-right: 5px;
+  color: #22c55e;
+}
+.page .content .wrapper .statistics .box .text .result span::before {
+  font-family: var(--fa-style-family-classic);
+  content: "\f102";
+  font-weight: 700;
+}
+.page .content .wrapper .statistics .box.Earnings .text .number {
+  color: #f44336;
+}
+.page .content .wrapper .statistics .students .icon {
+  background-color: rgba(0, 117, 255, 0.2);
+}
+.page .content .wrapper .statistics .students .icon i {
+  color: #0075ff;
+}
+.page .content .wrapper .statistics .courses .icon {
+  background-color: rgba(245, 158, 11, 0.2);
+}
+.page .content .wrapper .statistics .courses .icon i {
+  color: #f59e0b;
+}
+.page .content .wrapper .statistics .revenue .icon {
+  background-color: rgba(34, 197, 94, 0.2);
+}
+.page .content .wrapper .statistics .revenue .icon i {
+  color: #22c55e;
+}
+.page .content .wrapper .statistics .Earnings .icon {
+  background-color: rgba(244, 67, 54, 0.2);
+}
+.page .content .wrapper .statistics .Earnings .icon i {
+  color: #f44336;
 }
 .page .content .wrapper .welcome {
   overflow: hidden;
@@ -507,14 +622,6 @@ input[type=number] {
   background-color: white;
   border-radius: 10px;
 }
-.page .content .wrapper .quick-draft h2 {
-  margin-bottom: 10px;
-}
-.page .content .wrapper .quick-draft p {
-  color: #A89CA0;
-  margin-bottom: 20px;
-  font-size: 15px;
-}
 .page .content .wrapper .quick-draft form input[type=text], .page .content .wrapper .quick-draft form textarea {
   display: block;
   width: 100%;
@@ -531,14 +638,6 @@ input[type=number] {
   padding: 20px;
   background-color: white;
   border-radius: 10px;
-}
-.page .content .wrapper .yearly-target h2 {
-  margin-bottom: 10px;
-}
-.page .content .wrapper .yearly-target p {
-  color: #A89CA0;
-  margin-bottom: 20px;
-  font-size: 15px;
 }
 .page .content .wrapper .yearly-target .target-row {
   margin-bottom: 15px;
@@ -651,93 +750,89 @@ input[type=number] {
 .page .content .wrapper .yearly-target .target-row.team .progress > span span::after {
   border-top-color: #22c55e;
 }
-.page .content .wrapper .statistics {
-  grid-column-start: 1;
-  grid-column-end: -1;
-  padding: 10px;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-  justify-content: space-between;
-}
-.page .content .wrapper .statistics .box {
-  padding: 30px 10px;
+.page .content .wrapper .tickets-stats {
+  padding: 20px;
   background-color: white;
   border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
-.page .content .wrapper .statistics .box .icon {
-  margin-right: 10px;
-  width: 70px;
-  height: 70px;
+.page .content .wrapper .tickets-stats .stats .box {
   display: flex;
-  justify-content: center;
   align-items: center;
+  border: 2px solid #EEEEEE;
   border-radius: 6px;
+  padding: 20px;
+  margin: 20px 0px;
 }
-.page .content .wrapper .statistics .box .icon i {
-  font-size: 30px;
-}
-.page .content .wrapper .statistics .box .text span {
-  display: block;
-}
-.page .content .wrapper .statistics .box .text .title {
-  font-weight: 700;
-  color: #333333;
-}
-.page .content .wrapper .statistics .box .text .number {
-  font-weight: 500;
-  margin: 5px 0px;
-  font-weight: 700;
-  color: #333333;
-}
-.page .content .wrapper .statistics .box .text .date {
-  color: #A89CA0;
-  font-size: 13px;
-}
-.page .content .wrapper .statistics .box .text .result {
-  margin: 5px 0px 0px;
-  display: flex;
-  align-items: center;
-  font-size: 13px;
-  color: #A89CA0;
-}
-.page .content .wrapper .statistics .box .text .result span {
-  font-size: 12px;
-  margin-right: 5px;
-  color: #22c55e;
-}
-.page .content .wrapper .statistics .box .text .result span::before {
-  font-family: var(--fa-style-family-classic);
-  content: "\f102";
-  font-weight: 700;
-}
-.page .content .wrapper .statistics .box.Earnings .text .number {
-  color: #f44336;
-}
-.page .content .wrapper .students .icon {
-  background-color: rgba(0, 117, 255, 0.2);
-}
-.page .content .wrapper .students .icon i {
+.page .content .wrapper .tickets-stats .stats .box i {
   color: #0075ff;
+  font-size: 35px;
+  margin-right: 10px;
 }
-.page .content .wrapper .courses .icon {
-  background-color: rgba(245, 158, 11, 0.2);
+.page .content .wrapper .tickets-stats .stats .box h4 {
+  color: #A89CA0;
 }
-.page .content .wrapper .courses .icon i {
+.page .content .wrapper .tickets-stats .stats .box span {
+  font-weight: 700;
+  font-size: 18px;
+  margin-left: 10px;
+}
+.page .content .wrapper .tickets-stats .stats .total i {
   color: #f59e0b;
 }
-.page .content .wrapper .revenue .icon {
-  background-color: rgba(34, 197, 94, 0.2);
+.page .content .wrapper .tickets-stats .stats .pending i {
+  color: #0075ff;
 }
-.page .content .wrapper .revenue .icon i {
+.page .content .wrapper .tickets-stats .stats .closed i {
   color: #22c55e;
 }
-.page .content .wrapper .Earnings .icon {
-  background-color: rgba(244, 67, 54, 0.2);
-}
-.page .content .wrapper .Earnings .icon i {
+.page .content .wrapper .tickets-stats .stats .deleted i {
   color: #f44336;
+}
+.page .content .wrapper .my-activity {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.page .content .wrapper .my-activity .timelines {
+  position: relative;
+}
+.page .content .wrapper .my-activity .timelines::before {
+  content: "";
+  position: absolute;
+  width: 2px;
+  background-color: #A89CA0;
+  height: 100%;
+  left: 54px;
+  bottom: 0;
+}
+.page .content .wrapper .my-activity .timeline {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.page .content .wrapper .my-activity .timeline .timeline-label {
+  font-weight: 700;
+  color: #3F4254;
+  font-size: 14px;
+}
+.page .content .wrapper .my-activity .timeline .timeline-badge {
+  margin: 1px 10px 0px;
+  z-index: 1;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  border: 6px solid white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  padding: 3px;
+}
+.page .content .wrapper .my-activity .timeline .timeline-badge i {
+  font-weight: 700;
+}
+.page .content .wrapper .my-activity .timeline .timeline-content {
+  font-weight: 700;
+  color: #3F4254;
+  font-size: 14px;
 }/*# sourceMappingURL=homepage.css.map */
