--- a/css/homepage.css
+++ b/css/homepage.css
@@ -835,4 +835,62 @@ input[type=number] {
   font-weight: 700;
   color: #3F4254;
   font-size: 14px;
+}
+.page .content .wrapper .latest-news {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.page .content .wrapper .latest-news .news-row {
+  display: flex;
+  align-items: center;
+  padding: 10px 5px;
+  position: relative;
+  text-align: center;
+}
+.page .content .wrapper .latest-news .news-row:not(:last-of-type) {
+  margin-bottom: 15px;
+  border-bottom: 1px solid #EEEEEE;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .latest-news .news-row {
+    display: block;
+  }
+}
+.page .content .wrapper .latest-news .news-row img {
+  width: 100px;
+  border-radius: 6px;
+}
+.page .content .wrapper .latest-news .news-row .content {
+  flex-grow: 1;
+  margin-left: 15px;
+  text-align: start;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .latest-news .news-row .content {
+    margin: 15px 0px;
+    text-align: center;
+  }
+}
+.page .content .wrapper .latest-news .news-row .content h3 {
+  margin-bottom: 5px;
+  font-size: 16px;
+}
+.page .content .wrapper .latest-news .news-row .content p {
+  color: #A89CA0;
+}
+.page .content .wrapper .latest-news .news-row .date {
+  font-size: 13px;
+  color: #A89CA0;
+  font-weight: 700;
+  position: absolute;
+  right: 0;
+  top: 10px;
+}
+@media (max-width:767px) {
+  .page .content .wrapper .latest-news .news-row .date {
+    position: static;
+    flex: 1;
+    text-align: end;
+  }
 }/*# sourceMappingURL=homepage.css.map */
