--- a/css/sass/layout/_content.scss
+++ b/css/sass/layout/_content.scss
@@ -549,5 +549,56 @@
                 }
             }
         }
+        .latest-news{
+            padding: 20px;
+            background-color: white;
+            border-radius: $rad10;
+            .news-row{
+                @include contentVericalCenterer();
+                padding: 10px 5px;
+                position: relative;
+                text-align: center;
+                &:not(:last-of-type){
+                    margin-bottom: 15px;
+                    border-bottom: 1px solid $gray-third-color;
+                }
+                @media ($maxMobile){
+                    display: block;
+                }
+                img{
+                    width: 100px;
+                    border-radius: $rad6;
+                }
+                .content{
+                    flex-grow: 1;
+                    margin-left: 15px;
+                    text-align: start;
+                    @media ($maxMobile){
+                        margin: 15px 0px;
+                        text-align: center;
+                    }
+                    h3{
+                        margin-bottom: 5px;
+                        font-size: 16px;
+                    }
+                    p{
+                        color: $gray-color;
+                    }
+                }
+                .date{
+                    font-size: 13px;
+                    color: $gray-color;
+                    font-weight: 700;
+                    position: absolute;
+                    right: 0;
+                    top: 10px;
+                    @media ($maxMobile){
+                        position: static;
+                        flex: 1;
+                        text-align: end;
+                    }
+                }
+            }
+        }
     }
 }
