--- a/css/homepage.css
+++ b/css/homepage.css
@@ -356,6 +356,7 @@ input[type=number] {
   display: grid;
   gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+  padding-bottom: 20px;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -893,4 +894,29 @@ input[type=number] {
     flex: 1;
     text-align: end;
   }
+}
+.page .content .wrapper .top-search {
+  padding: 20px;
+  background-color: white;
+  border-radius: 6px;
+}
+.page .content .wrapper .top-search .items-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  color: #A89CA0;
+}
+.page .content .wrapper .top-search .items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 0px;
+}
+.page .content .wrapper .top-search .items .count {
+  background-color: #EEEEEE;
+  font-size: 14px;
+  padding: 5px;
+  border-radius: 6px;
+  font-weight: 500;
 }/*# sourceMappingURL=homepage.css.map */
