--- a/css/sass/layout/_global-rules.scss
+++ b/css/sass/layout/_global-rules.scss
@@ -113,3 +113,15 @@ body{
   .info{
     color: purple;
   }
+  .bg-blue{
+    background-color: $blue-color;
+  }
+  .bg-green{
+    background-color: $green-color;
+  }
+  .bg-red{
+    background-color: $red-color;
+  }
+  .bg-orange{
+    background-color: $orange-color;
+  }
