--- a/css/sass/layout/_global-rules.scss
+++ b/css/sass/layout/_global-rules.scss
@@ -113,6 +113,18 @@ body{
   .info{
     color: purple;
   }
+  .blue{
+    color: $blue-color;
+  }
+  .green{
+    color: $green-color;
+  }
+  .red{
+    color: $red-color;
+  }
+  .orange{
+    color: $orange-color;
+  }
   .bg-blue{
     background-color: $blue-color;
   }
