--- a/css/sass/layout/_content.scss
+++ b/css/sass/layout/_content.scss
@@ -625,7 +625,7 @@
         .latest-uploads{
             padding: 20px;
             background-color: white;
-            border-radius: $rad20;
+            border-radius: $rad10;
             h2{
                 margin-bottom: 20px;
             }
@@ -727,6 +727,178 @@
                     }
                     .content{
                         border-left-color: $green-color;
+                    }
+                }
+            }
+        }
+        .latest-post{
+            padding: 20px;
+            background-color: white;
+            border-radius: $rad10;
+            .post{
+                .post-header{
+                    padding: 10px 0px 20px;
+                    border-bottom: 1px solid $gray-third-color;
+                    @include contentVericalCenterer();
+                    .picture{
+                        @include circle(45px);
+                        margin-right: 15px;
+                    }
+                    .profile{
+                        .name{
+                            display: block;
+                            margin-bottom: 5px;
+                            font-weight: 700;
+                        }
+                        .time{
+                            font-size: 13px;
+                            color: $gray-color;
+                            font-weight: 600;
+                        }
+                    }
+                }
+                .content{
+                    padding: 20px 0px;
+                    border-bottom: 1px solid $gray-third-color;
+                }
+                .statistic{
+                    @include flexBetween;
+                    padding: 20px 0px;
+                    .likes,.comments{
+                        i,span{
+                            color: $gray-color;
+                        }
+                    }
+                }
+            }
+        }
+        .media-stats{
+            background-color: white;
+            padding: 20px;
+            border-radius: $rad10;
+            .socials{
+                @include columnFlex();
+                .box{
+                    &:not(:last-of-type){
+                        margin-bottom: 20px
+                    }
+                    @include flexBetween();
+                    .icon{
+                        width: 50px;
+                        height: 50px;
+                        @include contentCenterer();
+                        i{
+                            color: white;
+                        }
+                    }
+                    .followers-count{
+                        flex: 1;
+                        padding-left: 15px;
+                        font-weight:600 ;
+                    }
+                    a{
+                    color: white; 
+                    padding: 5px 10px;
+                    border-radius: $rad6;
+                    font-size: 13px;
+                    margin-right: 10px;
+                    }
+                }
+                .box.twitter{
+                    background-color: rgba($color: #1DA1F2, $alpha: 0.1);
+                    .icon{
+                        background-color: #1DA1F2;
+                    }
+                    .followers-count{
+                        color: #1DA1F2;
+                    }
+                    a{
+                        background-color: #1DA1F2;
+                    }
+                }
+                .box.facebook{
+                    background-color: rgba($color: #1877F2, $alpha: 0.1);
+                    .icon{
+                        background-color: #1877F2;
+                    }
+                    .followers-count{
+                        color: #1877F2;
+                    }
+                    a{
+                        background-color: #1877F2;
+                    }
+                }
+                .box.youtube{
+                    background-color: rgba($color: #FF0000, $alpha: 0.1);
+                    .icon{
+                        background-color: #FF0000;
+                    }
+                    .followers-count{
+                        color: #FF0000;
+                    }
+                    a{
+                        background-color: #FF0000;
+                    }
+                }
+                .box.linkedIn{
+                    background-color: rgba($color: #0077B5, $alpha: 0.1);
+                    .icon{
+                        background-color: #0077B5;
+                    }
+                    .followers-count{
+                        color: #0077B5;
+                    }
+                    a{
+                        background-color: #0077B5;
+                    }
+                }
+            }
+        }
+        .projects{
+            background-color: white;
+            padding: 20px;
+            border-radius: $rad10;
+            grid-column-start: 1;
+            grid-column-end: -1;
+            .responsive-table{
+                overflow-x: auto;
+                table{
+                    font-size: 15px;
+                    min-width: 1000px;
+                    border-spacing: 0;
+                    td{
+                        padding: 15px;
+                    }
+                    thead{
+                        td{
+                            background-color: $gray-alt-color;
+                            font-weight: bold;
+                        }
+                    }
+                    tbody{
+                        tr{
+                            &:hover{
+                                background-color: #faf7f7;
+                            }
+                            td{
+                                border-bottom: 1px solid $gray-third-color;
+                                border-left: 1px solid $gray-third-color;
+                                font-weight: 600;
+                                font-size: 13px;
+                                &:last-child{
+                                    border-right: 1px solid $gray-third-color;
+
+                                }
+                                img{
+                                    @include circle(32px);
+                                    padding: 2px;
+                                    background-color: white;
+                                    &:not(:first-child){
+                                        margin-left: -20px;
+                                    }
+                                }
+                            }
+                        }
                     }
                 }
             }
