--- a/css/sass/layout/_global-rules.scss
+++ b/css/sass/layout/_global-rules.scss
@@ -137,3 +137,7 @@ body{
   .bg-orange{
     background-color: $orange-color;
   }
+  .page{
+    display: flex;
+    background-color: $bg-color;
+}
