--- a/css/settings.scss
+++ b/css/settings.scss
@@ -13,6 +13,8 @@
 //import wrapper
 @import "sass/layout/wrapper";
 // import dashboard
-@import "sass/pages/dashboard";
+@import "sass/pages/settings";
 // import buttons
 @import "sass/components/buttons";
+// import checkbox
+@import "sass/components/checkbox";
