make social info

--- a/css/sass/helpers/_mixins.scss
+++ b/css/sass/helpers/_mixins.scss
@@ -75,7 +75,7 @@ align-items: center;
     display: flex;
     flex-direction: column;
 }
-@include flexAlignCenter(){
+@mixin flexAlignCenter(){
     display: flex;
     align-items: center;
 }
