--- a/css/sass/pages/_settings.scss
+++ b/css/sass/pages/_settings.scss
@@ -109,9 +109,25 @@
             margin-bottom: 15px;
             i{
                 color: $gray-color;
+                background-color: #F6F6F6;
+                width: 40px;
+                height: 40px;
+                @include contentCenterer();
+                border: 1px solid #DDD;
+                border-right: none;
+                border-radius: $rad6 0 0 $rad6;
+                transition-duration: $mainTransitionDuration;
             }
             input{
                 width: 100%;
+                height: 40px;
+                background-color: #F6F6F6;
+                border: 1px solid #DDD;
+                border-radius: 0 $rad6 $rad6 0;
+                padding-left: 10px;
+            }
+            &:focus-within i{
+                color: black;
             }
         }
     }
