--- a/css/settings.css
+++ b/css/settings.css
@@ -519,8 +519,34 @@ input[type=number] {
   background-color: white;
   border-radius: 6px;
 }
+.wrapper .social-info .social-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.wrapper .social-info .social-box i {
+  color: #A89CA0;
+  background-color: #F6F6F6;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #DDD;
+  border-right: none;
+  border-radius: 6px 0 0 6px;
+  transition-duration: 0.3s;
+}
 .wrapper .social-info .social-box input {
   width: 100%;
+  height: 40px;
+  background-color: #F6F6F6;
+  border: 1px solid #DDD;
+  border-radius: 0 6px 6px 0;
+  padding-left: 10px;
+}
+.wrapper .social-info .social-box:focus-within i {
+  color: black;
 }
 
 .toggle-checkbox {
