--- a/css/sass/pages/_dashboard.scss
+++ b/css/sass/pages/_dashboard.scss
@@ -73,12 +73,12 @@
                 padding: 30px 10px;
                 background-color: white;
                 border-radius: $rad10;
-                @include flexCenterer();
+                @include contentCenterer;
                 .icon{
                     margin-right: 10px;
                     width: 70px;
                     height: 70px;
-                    @include flexCenterer();
+                    @include contentCenterer;
                     border-radius: $rad6;
                     i{
                         font-size: 30px;
@@ -274,7 +274,7 @@
                 .icon{
                     width: 80px;
                     height: 80px;
-                    @include flexCenterer();
+                    @include contentCenterer;
                     background-color: red;
                     margin-right: 15px;
                 }
@@ -459,7 +459,7 @@
                     z-index: 1;
                     @include circle(13px);
                     border: 6px solid white;
-                    @include flexCenterer();
+                    @include contentCenterer;
                     background-color: white;
                     padding: 3px;
                     i{
