--- a/css/profile.css
+++ b/css/profile.css
@@ -401,250 +401,118 @@ input[type=number] {
   }
 }
 
-.wrapper .site-control {
-  padding: 20px;
+.wrapper .overview {
   background-color: white;
   border-radius: 10px;
-}
-.wrapper .site-control > div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-}
-.wrapper .site-control > div > div span {
-  font-weight: 600;
-}
-.wrapper .site-control > div > div P {
-  margin-top: 10px;
-  font-size: 13px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea {
-  width: 100%;
-  height: 160px;
-  resize: none;
-  border: 1px solid #EEEEEE;
-  padding: 5px;
-}
-.wrapper .site-control textarea::-moz-placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea:-ms-input-placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea::placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .general-info {
-  padding: 20px;
-  border-radius: 6px;
-  background-color: white;
-}
-.wrapper .general-info .inputs {
-  margin-bottom: 15px;
-}
-.wrapper .general-info label {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .general-info input {
-  display: block;
-  width: 100%;
-  margin: 10px 0px;
-  border: 1px solid #EEEEEE;
-  border-radius: 6px;
-  padding: 10px;
-}
-.wrapper .general-info input::-moz-placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info input:-ms-input-placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info input::placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info .email label {
-  display: block;
-}
-.wrapper .general-info .email input {
-  width: calc(100% - 80px);
-  display: inline-flex;
-}
-.wrapper .general-info .email a {
-  display: inline-flex;
-}
-.wrapper .security-info {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .security-info .sec-box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-  padding-bottom: 20px;
-}
-.wrapper .security-info .sec-box:not(:last-of-type) {
-  border-bottom: 1px solid #EEEEEE;
-}
-.wrapper .security-info .sec-box div span {
-  font-weight: 700;
-}
-.wrapper .security-info .sec-box div p {
-  margin-top: 10px;
-  font-size: 13px;
-  color: #A89CA0;
-  font-weight: 600;
-}
-.wrapper .security-info .sec-box a {
-  background-color: #287BFF;
-  color: white;
-  padding: 10px;
-  border-radius: 6px;
-  font-weight: 700;
-  font-size: 14px;
-}
-.wrapper .security-info .sec-box a:hover {
-  background-color: #3d38d3;
-  transition: 0.3s;
-}
-.wrapper .social-info {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .social-info .social-box {
+  grid-column-start: 1;
+  grid-column-end: -1;
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
-}
-.wrapper .social-info .social-box i {
-  color: #A89CA0;
-  background-color: #F6F6F6;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #DDD;
-  border-right: none;
-  border-radius: 6px 0 0 6px;
-  transition-duration: 0.3s;
-}
-.wrapper .social-info .social-box input {
-  width: 100%;
-  height: 40px;
-  background-color: #F6F6F6;
-  border: 1px solid #DDD;
-  border-radius: 0 6px 6px 0;
-  padding-left: 10px;
-}
-.wrapper .social-info .social-box:focus-within i {
-  color: black;
-}
-.wrapper .widgets-control {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .widgets-control .control {
-  display: flex;
-  margin-bottom: 15px;
-}
-.wrapper .widgets-control .control input {
-  margin-right: 10px;
-}
-.wrapper .backup-manager {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .backup-manager .manage {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
-}
-.wrapper .backup-manager .manage input {
-  margin-right: 10px;
-}
-.wrapper .backup-manager .servers {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-  text-align: center;
-  padding-top: 20px;
-  border-top: 1px solid #EEEEEE;
 }
 @media (max-width:767px) {
-  .wrapper .backup-manager .servers {
+  .wrapper .overview {
     flex-direction: column;
+    padding: 20px 0px;
   }
 }
-.wrapper .backup-manager .servers input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
+.wrapper .overview .avatar-box {
+  width: 300px;
+  text-align: center;
 }
-.wrapper .backup-manager .servers input:checked + .server {
-  border: 2px solid #0075ff;
+@media (min-width:768px) {
+  .wrapper .overview .avatar-box {
+    border-right: 1px solid #eee;
+  }
 }
-.wrapper .backup-manager .servers input:checked + .server .label {
-  color: #0075ff;
+.wrapper .overview .avatar-box img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
 }
-.wrapper .backup-manager .servers input:checked + .server .label i {
-  color: #0075ff;
+.wrapper .overview .avatar-box h3 {
+  margin: 10px 0px;
 }
-.wrapper .backup-manager .servers .server {
-  margin-bottom: 15px;
-  border-radius: 10px;
-  width: 100%;
-  border: 2px solid #EEEEEE;
-  padding: 10px;
+.wrapper .overview .avatar-box .level {
+  color: #A89CA0;
 }
-.wrapper .backup-manager .servers .server label {
-  display: block;
-  cursor: pointer;
+.wrapper .overview .avatar-box .level-progress {
+  height: 6px;
+  overflow: hidden;
+  background-color: #ccc;
+  border-radius: 6px;
+  margin: 10px auto;
+  position: relative;
+  width: 70%;
 }
-.wrapper .backup-manager .servers .server label i {
-  display: block;
+.wrapper .overview .avatar-box .level-progress span {
+  position: absolute;
+  background-color: #287BFF;
+  top: 0;
+  left: 0;
+  height: 100%;
+  border-radius: 6px;
+}
+.wrapper .overview .avatar-box .stars {
+  font-size: 13px;
   margin-bottom: 10px;
 }
-
-.progress {
-  position: relative;
-  background-color: rgba(34, 197, 94, 0.2);
+.wrapper .overview .avatar-box .rating {
+  font-size: 14px;
+  color: #A89CA0;
 }
-.progress > span {
-  background-color: red;
-  display: block;
-  position: relative;
-  height: 4px;
+.wrapper .overview .info-box {
+  border-left: 1px solid #EEEEEE;
 }
-.progress > span span {
-  position: absolute;
-  right: -16px;
-  bottom: 16px;
-  padding: 2px 5px;
+@media (max-width:767px) {
+  .wrapper .overview .info-box {
+    text-align: center;
+  }
+}
+.wrapper .overview .info-box .box {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+.wrapper .overview .info-box .box:not(:last-of-type) {
+  border-bottom: 1px solid #EEEEEE;
+}
+.wrapper .overview .info-box .box:hover {
+  background-color: #fafafa;
+}
+.wrapper .overview .info-box .box h4 {
+  width: 100%;
+  color: #A89CA0;
+  font-weight: normal;
+  font-size: 15px;
+}
+.wrapper .overview .info-box .box > div {
+  min-width: 250px;
+  padding: 10px 0 0;
+}
+.wrapper .overview .info-box .box > div span:first-child {
+  color: #A89CA0;
+}
+@media (max-width:767px) {
+  .wrapper .overview .info-box .box label {
+    margin: auto;
+  }
+}
+.wrapper .my-skills {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  width: 350px;
+}
+.wrapper .my-skills ul li {
+  padding: 20px;
+  border-bottom: 1px solid #EEEEEE;
+}
+.wrapper .my-skills ul li span {
+  padding: 5px;
+  background-color: #EEEEEE;
+  margin-left: 10px;
   border-radius: 6px;
-  color: white;
-  font-weight: 700;
-  font-size: 13px;
-}
-.progress > span span::after {
-  content: "";
-  border-color: transparent;
-  border-width: 5px;
-  border-style: solid;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: -10px;
 }
 
 .toggle-checkbox {
@@ -690,4 +558,4 @@ input[type=number] {
   justify-content: center;
   color: #aaa;
   transition: 0.3s;
-}/*# sourceMappingURL=settings.css.map */
+}/*# sourceMappingURL=profile.css.map */
