--- a/css/profile.scss
+++ b/css/profile.scss
@@ -13,10 +13,8 @@
 //import wrapper
 @import "sass/layout/wrapper";
 // import dashboard
-@import "sass/pages/settings";
+@import "sass/pages/profile";
 // import buttons
 @import "sass/components/buttons";
-// import progress
-@import "sass/components/progress";
 // import checkbox
 @import "sass/components/checkbox";
