--- a/css/projects.css
+++ b/css/projects.css
@@ -401,219 +401,69 @@ button {
   }
 }
 
-.wrapper .site-control {
-  padding: 20px;
+.wrapper .project {
   background-color: white;
-  border-radius: 10px;
-}
-.wrapper .site-control > div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-}
-.wrapper .site-control > div > div span {
-  font-weight: 600;
-}
-.wrapper .site-control > div > div P {
-  margin-top: 10px;
-  font-size: 13px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea {
-  width: 100%;
-  height: 160px;
-  resize: none;
-  border: 1px solid #EEEEEE;
-  padding: 5px;
-}
-.wrapper .site-control textarea::-moz-placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea:-ms-input-placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea::placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .general-info {
   padding: 20px;
   border-radius: 6px;
-  background-color: white;
+  position: relative;
 }
-.wrapper .general-info .inputs {
-  margin-bottom: 15px;
-}
-.wrapper .general-info label {
+.wrapper .project .date {
   font-size: 14px;
   color: #A89CA0;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
-.wrapper .general-info input {
-  display: block;
-  width: 100%;
+.wrapper .project h3 {
+  font-weight: 600;
+}
+.wrapper .project p {
+  font-size: 13px;
+  color: #A89CA0;
+  font-weight: 600;
   margin: 10px 0px;
-  border: 1px solid #EEEEEE;
-  border-radius: 6px;
-  padding: 10px;
 }
-.wrapper .general-info input::-moz-placeholder {
-  font-size: 14px;
+.wrapper .project .team {
+  margin-top: 20px;
 }
-.wrapper .general-info input:-ms-input-placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info input::placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info .email label {
-  display: block;
-}
-.wrapper .general-info .email input {
-  width: calc(100% - 80px);
-  display: inline-flex;
-}
-.wrapper .general-info .email a {
-  display: inline-flex;
-}
-.wrapper .security-info {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .security-info .sec-box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-  padding-bottom: 20px;
-}
-.wrapper .security-info .sec-box:not(:last-of-type) {
-  border-bottom: 1px solid #EEEEEE;
-}
-.wrapper .security-info .sec-box div span {
-  font-weight: 700;
-}
-.wrapper .security-info .sec-box div p {
-  margin-top: 10px;
-  font-size: 13px;
-  color: #A89CA0;
-  font-weight: 600;
-}
-.wrapper .security-info .sec-box a {
-  background-color: #287BFF;
-  color: white;
-  padding: 10px;
-  border-radius: 6px;
-  font-weight: 700;
-  font-size: 14px;
-}
-.wrapper .security-info .sec-box a:hover {
-  background-color: #3d38d3;
-  transition: 0.3s;
-}
-.wrapper .social-info {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .social-info .social-box {
-  display: flex;
-  align-items: center;
-  margin-bottom: 15px;
-}
-.wrapper .social-info .social-box i {
-  color: #A89CA0;
-  background-color: #F6F6F6;
+.wrapper .project .team img {
   width: 40px;
   height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #DDD;
-  border-right: none;
-  border-radius: 6px 0 0 6px;
+  border-radius: 50%;
+  margin-right: -15px;
+  background-color: white;
+  padding: 2px;
+  position: relative;
+  cursor: pointer;
   transition-duration: 0.3s;
 }
-.wrapper .social-info .social-box input {
-  width: 100%;
-  height: 40px;
-  background-color: #F6F6F6;
-  border: 1px solid #DDD;
-  border-radius: 0 6px 6px 0;
-  padding-left: 10px;
+.wrapper .project .team img:hover {
+  z-index: 1;
 }
-.wrapper .social-info .social-box:focus-within i {
-  color: black;
-}
-.wrapper .widgets-control {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .widgets-control .control {
+.wrapper .project .works {
+  margin-top: 15px;
+  border: 1px solid #EEEEEE;
+  border-left: none;
+  border-right: none;
   display: flex;
-  margin-bottom: 15px;
-}
-.wrapper .widgets-control .control input {
-  margin-right: 10px;
-}
-.wrapper .backup-manager {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .backup-manager .manage {
-  display: flex;
+  justify-content: end;
   align-items: center;
-  margin-bottom: 10px;
+  padding: 10px 0;
 }
-.wrapper .backup-manager .manage input {
-  margin-right: 10px;
+.wrapper .project .works span {
+  padding: 5px;
+  background-color: #EEEEEE;
+  border-radius: 6px;
+  margin-right: 5px;
 }
-.wrapper .backup-manager .servers {
+.wrapper .project .info {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 5px;
-  text-align: center;
-  padding-top: 20px;
-  border-top: 1px solid #EEEEEE;
+  margin-top: 15px;
 }
-@media (max-width:767px) {
-  .wrapper .backup-manager .servers {
-    flex-direction: column;
-  }
-}
-.wrapper .backup-manager .servers input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-}
-.wrapper .backup-manager .servers input:checked + .server {
-  border: 2px solid #0075ff;
-}
-.wrapper .backup-manager .servers input:checked + .server .label {
-  color: #0075ff;
-}
-.wrapper .backup-manager .servers input:checked + .server .label i {
-  color: #0075ff;
-}
-.wrapper .backup-manager .servers .server {
-  margin-bottom: 15px;
-  border-radius: 10px;
-  width: 100%;
-  border: 2px solid #EEEEEE;
-  padding: 10px;
-}
-.wrapper .backup-manager .servers .server label {
-  display: block;
-  cursor: pointer;
-}
-.wrapper .backup-manager .servers .server label i {
-  display: block;
-  margin-bottom: 10px;
+.wrapper .project .info .price {
+  color: #A89CA0;
 }
 
 .simple-progress {
@@ -676,4 +526,4 @@ button {
   justify-content: center;
   color: #aaa;
   transition: 0.3s;
-}/*# sourceMappingURL=settings.css.map */
+}/*# sourceMappingURL=projects.css.map */
