--- a/css/team.css
+++ b/css/team.css
@@ -401,219 +401,77 @@ button {
   }
 }
 
-.wrapper .site-control {
-  padding: 20px;
+.wrapper {
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+}
+.wrapper .member {
   background-color: white;
+  padding: 20px;
   border-radius: 10px;
+  position: relative;
 }
-.wrapper .site-control > div {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-}
-.wrapper .site-control > div > div span {
-  font-weight: 600;
-}
-.wrapper .site-control > div > div P {
-  margin-top: 10px;
-  font-size: 13px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea {
-  width: 100%;
-  height: 160px;
-  resize: none;
-  border: 1px solid #EEEEEE;
-  padding: 5px;
-}
-.wrapper .site-control textarea::-moz-placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea:-ms-input-placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .site-control textarea::placeholder {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .general-info {
-  padding: 20px;
-  border-radius: 6px;
-  background-color: white;
-}
-.wrapper .general-info .inputs {
-  margin-bottom: 15px;
-}
-.wrapper .general-info label {
-  font-size: 14px;
-  color: #A89CA0;
-}
-.wrapper .general-info input {
-  display: block;
-  width: 100%;
-  margin: 10px 0px;
-  border: 1px solid #EEEEEE;
-  border-radius: 6px;
-  padding: 10px;
-}
-.wrapper .general-info input::-moz-placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info input:-ms-input-placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info input::placeholder {
-  font-size: 14px;
-}
-.wrapper .general-info .email label {
-  display: block;
-}
-.wrapper .general-info .email input {
-  width: calc(100% - 80px);
-  display: inline-flex;
-}
-.wrapper .general-info .email a {
-  display: inline-flex;
-}
-.wrapper .security-info {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .security-info .sec-box {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 15px;
-  padding-bottom: 20px;
-}
-.wrapper .security-info .sec-box:not(:last-of-type) {
-  border-bottom: 1px solid #EEEEEE;
-}
-.wrapper .security-info .sec-box div span {
-  font-weight: 700;
-}
-.wrapper .security-info .sec-box div p {
-  margin-top: 10px;
-  font-size: 13px;
-  color: #A89CA0;
-  font-weight: 600;
-}
-.wrapper .security-info .sec-box a {
-  background-color: #287BFF;
-  color: white;
-  padding: 10px;
-  border-radius: 6px;
-  font-weight: 700;
-  font-size: 14px;
-}
-.wrapper .security-info .sec-box a:hover {
-  background-color: #3d38d3;
-  transition: 0.3s;
-}
-.wrapper .social-info {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .social-info .social-box {
+.wrapper .member .contact {
   display: flex;
   align-items: center;
-  margin-bottom: 15px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
-.wrapper .social-info .social-box i {
-  color: #A89CA0;
-  background-color: #F6F6F6;
-  width: 40px;
-  height: 40px;
+.wrapper .member .contact i {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
   display: flex;
-  align-items: center;
   justify-content: center;
-  border: 1px solid #DDD;
-  border-right: none;
-  border-radius: 6px 0 0 6px;
-  transition-duration: 0.3s;
-}
-.wrapper .social-info .social-box input {
-  width: 100%;
-  height: 40px;
-  background-color: #F6F6F6;
-  border: 1px solid #DDD;
-  border-radius: 0 6px 6px 0;
-  padding-left: 10px;
-}
-.wrapper .social-info .social-box:focus-within i {
-  color: black;
-}
-.wrapper .widgets-control {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .widgets-control .control {
-  display: flex;
-  margin-bottom: 15px;
-}
-.wrapper .widgets-control .control input {
-  margin-right: 10px;
-}
-.wrapper .backup-manager {
-  padding: 20px;
-  background-color: white;
-  border-radius: 6px;
-}
-.wrapper .backup-manager .manage {
-  display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  background-color: #EEEEEE;
+  margin-right: 5px;
+  color: #666666;
 }
-.wrapper .backup-manager .manage input {
-  margin-right: 10px;
-}
-.wrapper .backup-manager .servers {
-  display: flex;
-  align-items: center;
-  gap: 5px;
+.wrapper .member .profile {
   text-align: center;
-  padding-top: 20px;
+}
+.wrapper .member .profile img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.wrapper .member .profile h4 {
+  margin: 10px 0px;
+}
+.wrapper .member .profile p {
+  color: #A89CA0;
+}
+.wrapper .member .icons {
+  padding: 15px 0px;
+  margin: 15px 0;
+  border-bottom: 1px solid #EEEEEE;
   border-top: 1px solid #EEEEEE;
 }
-@media (max-width:767px) {
-  .wrapper .backup-manager .servers {
-    flex-direction: column;
-  }
-}
-.wrapper .backup-manager .servers input {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-}
-.wrapper .backup-manager .servers input:checked + .server {
-  border: 2px solid #0075ff;
-}
-.wrapper .backup-manager .servers input:checked + .server .label {
-  color: #0075ff;
-}
-.wrapper .backup-manager .servers input:checked + .server .label i {
-  color: #0075ff;
-}
-.wrapper .backup-manager .servers .server {
-  margin-bottom: 15px;
-  border-radius: 10px;
-  width: 100%;
-  border: 2px solid #EEEEEE;
-  padding: 10px;
-}
-.wrapper .backup-manager .servers .server label {
-  display: block;
-  cursor: pointer;
-}
-.wrapper .backup-manager .servers .server label i {
-  display: block;
+.wrapper .member .icons div {
   margin-bottom: 10px;
+  font-size: 14px;
+}
+.wrapper .member .info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.wrapper .member .info span {
+  font-size: 13px;
+  color: #A89CA0;
+}
+.wrapper .member .info div a {
+  color: white;
+  padding: 4px 10px;
+  border-radius: 6px;
+  font-size: 13px;
+}
+.wrapper .member .info div .profile {
+  background-color: #0075ff;
+}
+.wrapper .member .info div .remove {
+  background-color: #f44336;
 }
 
 .simple-progress {
@@ -676,4 +534,4 @@ button {
   justify-content: center;
   color: #aaa;
   transition: 0.3s;
-}/*# sourceMappingURL=settings.css.map */
+}/*# sourceMappingURL=team.css.map */
